--- a/feedback_sonalipay/pubspec.yaml
+++ b/feedback_sonalipay/pubspec.yaml
@@ -8,6 +8,8 @@ environment:
 
 dependencies:
   file_picker: ^8.0.6
+  firebase_core: ^3.2.0
+  firebase_database: ^11.0.3
   flutter:
     sdk: flutter
   flutter_riverpod: ^2.5.1
