--- a/feedback_sonalipay/pubspec.yaml
+++ b/feedback_sonalipay/pubspec.yaml
@@ -8,13 +8,14 @@ environment:
 
 dependencies:
   file_picker: ^8.0.6
-  firebase_core: ^3.2.0
-  cloud_firestore: ^5.1.0
-  firebase_storage: ^12.1.1
-  firebase_database: ^11.0.3
+  # firebase_core: ^3.2.0
+  # cloud_firestore: ^5.1.0
+  # firebase_storage: ^12.1.1
+  # firebase_database: ^11.0.3
   flutter:
     sdk: flutter
   flutter_riverpod: ^2.5.1
+  http: ^1.2.2
 
 dev_dependencies:
   flutter_test:
